test/fail/Invalid-name-part.agda
postulate
  _→_ : Set
